--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -139,6 +139,7 @@ periodics:
   knative/serving:
     - continuous: true
       timeout: 100
+      dot-dev: true
     - branch-ci: true
       release: "0.4"
     - branch-ci: true
@@ -149,25 +150,38 @@ periodics:
       release: "0.7"
     - custom-job: istio-1.0-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.0-latest --mesh"
+      dot-dev: true
     - custom-job: istio-1.0-no-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.0-latest --no-mesh"
+      dot-dev: true
     - custom-job: istio-1.1-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --mesh"
+      dot-dev: true
     - custom-job: istio-1.1-no-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --no-mesh"
+      dot-dev: true
     - custom-job: istio-1.2-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
+      dot-dev: true
     - custom-job: istio-1.2-no-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+      dot-dev: true
     - nightly: true
+      dot-dev: true
     - dot-release: true
+      dot-dev: true
     - auto-release: true
+      dot-dev: true
     - latency: true
+      dot-dev: true
     - performance: true
+      dot-dev: true
     - performance-mesh: true
+      dot-dev: true
       args:
       - "--mesh"
     - webhook-apicoverage: true
+      dot-dev: true
 
   knative/build:
     - continuous: true
