--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -14,7 +14,7 @@
 
 presubmits:
   knative/serving:
-    - nil:
+    - repo-settings:
       legacy-branches:
       - release-0.4
       - release-0.5
