--- a/ci/prow/config_start.yaml
+++ b/ci/prow/config_start.yaml
@@ -51,13 +51,13 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: "boskos"
-  namespace: test-pods
+  namespace: boskos-pods
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: "boskos"
-  namespace: test-pods
+  namespace: boskos-pods
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -65,13 +65,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: "boskos"
-  namespace: test-pods
+  namespace: boskos-pods
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: "boskos"
-  namespace: test-pods
+  namespace: boskos-pods
 rules:
   - apiGroups:
       - apiextensions.k8s.io
