--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -532,6 +532,11 @@ presubmits:
     optional: true
     decorate: true
     path_alias: knative.dev/serving
+    skip_branches:
+    - "release-0.4"
+    - "release-0.5"
+    - "release-0.6"
+    - "release-0.7"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/coverage-dev:latest-dev
@@ -4857,6 +4862,11 @@ postsubmits:
     agent: kubernetes
     decorate: true
     path_alias: knative.dev/serving
+    skip_branches:
+    - "release-0.4"
+    - "release-0.5"
+    - "release-0.6"
+    - "release-0.7"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/coverage-dev:latest-dev
