--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2728,6 +2728,37 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
+- cron: "28 */2 * * *"
+  name: ci-knative-serving-gloo-0.17.0
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: serving
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - runner.sh
+      args:
+      - "./test/e2e-tests.sh"
+      - "--gloo-version"
+      - "0.17.0"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-central1
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
 - cron: "56 9 * * *"
   name: ci-knative-serving-nightly-release
   agent: kubernetes
