--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -44,6 +44,24 @@ presubmits:
       always_run: false
       command:
       - "./test/performance-tests.sh"
+    - custom-test: istio-1.0-mesh
+      always_run: false
+      full-command: "./test/e2e-tests.sh --istio-version 1.0-latest --mesh"
+    - custom-test: istio-1.0-no-mesh
+      always_run: false
+      full-command: "./test/e2e-tests.sh --istio-version 1.0-latest --no-mesh"
+    - custom-test: istio-1.1-mesh
+      always_run: false
+      full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --mesh"
+    - custom-test: istio-1.1-no-mesh
+      always_run: false
+      full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --no-mesh"
+    - custom-test: istio-1.2-mesh
+      always_run: false
+      full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
+    - custom-test: istio-1.2-no-mesh
+      always_run: false
+      full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
 
   knative/build:
     - build-tests: true
