Eventing testing with vanity URL

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -79,6 +79,13 @@ presubmits:
         - "./test/presubmit-integration-tests-latest-release.sh"
 
   knative/eventing:
+    - repo-settings:
+      legacy-branches:
+      - release-0.4
+      - release-0.5
+      - release-0.6
+      - release-0.7
+      - release-0.8
     - build-tests: true
     - unit-tests: true
     - integration-tests: true
@@ -230,6 +237,7 @@ periodics:
   knative/eventing:
     - continuous: true
       timeout: 90
+      dot-dev: true
     - branch-ci: true
       release: "0.5"
     - branch-ci: true
@@ -237,9 +245,13 @@ periodics:
     - branch-ci: true
       release: "0.7"
     - nightly: true
+      dot-dev: true
     - dot-release: true
+      dot-dev: true
     - auto-release: true
+      dot-dev: true
     - performance: true
+      dot-dev: true
 
   knative/eventing-contrib:
     - continuous: true
