--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -291,4 +291,8 @@ periodics:
     - continuous: true
     - nightly: true
     - dot-release: true
+      env-vars:
+      - ORG_NAME=GoogleCloudPlatform
     - auto-release: true
+      env-vars:
+      - ORG_NAME=GoogleCloudPlatform
