--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -176,6 +176,9 @@ periodics:
     - custom-job: istio-1.2-no-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
       dot-dev: true
+    - custom-job: gloo-0.17.1
+      full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
+      dot-dev: true
     - nightly: true
       dot-dev: true
     - dot-release: true
