test-infra using knative.dev importing path

--- a/images/monitoring/Dockerfile
+++ b/images/monitoring/Dockerfile
@@ -15,7 +15,7 @@
 FROM golang:1.10.2
 RUN apt-get update
 
-ENV TEMP_REPO_DIR /go/src/github.com/knative/test-infra
+ENV TEMP_REPO_DIR /go/src/knative.dev/test-infra
 ENV TOOL_NAME monitoring
 
 # Temporarily add test-infra to the image to build custom tools
