--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -623,152 +623,6 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  - name: pull-knative-serving-istio-1.0-mesh
-    agent: kubernetes
-    context: pull-knative-serving-istio-1.0-mesh
-    always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.0-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.0-mesh),?(\\s+|$)"
-    decorate: true
-    branches:
-    - "release-0.4"
-    - "release-0.5"
-    - "release-0.6"
-    - "release-0.7"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.0-latest"
-        - "--mesh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
-  - name: pull-knative-serving-istio-1.0-mesh
-    agent: kubernetes
-    context: pull-knative-serving-istio-1.0-mesh
-    always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.0-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.0-mesh),?(\\s+|$)"
-    decorate: true
-    path_alias: knative.dev/serving
-    skip_branches:
-    - "release-0.4"
-    - "release-0.5"
-    - "release-0.6"
-    - "release-0.7"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.0-latest"
-        - "--mesh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
-  - name: pull-knative-serving-istio-1.0-no-mesh
-    agent: kubernetes
-    context: pull-knative-serving-istio-1.0-no-mesh
-    always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.0-no-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.0-no-mesh),?(\\s+|$)"
-    decorate: true
-    branches:
-    - "release-0.4"
-    - "release-0.5"
-    - "release-0.6"
-    - "release-0.7"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.0-latest"
-        - "--no-mesh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
-  - name: pull-knative-serving-istio-1.0-no-mesh
-    agent: kubernetes
-    context: pull-knative-serving-istio-1.0-no-mesh
-    always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.0-no-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.0-no-mesh),?(\\s+|$)"
-    decorate: true
-    path_alias: knative.dev/serving
-    skip_branches:
-    - "release-0.4"
-    - "release-0.5"
-    - "release-0.6"
-    - "release-0.7"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.0-latest"
-        - "--no-mesh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
   - name: pull-knative-serving-istio-1.1-mesh
     agent: kubernetes
     context: pull-knative-serving-istio-1.1-mesh
@@ -2742,72 +2596,6 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "28 */2 * * *"
-  name: ci-knative-serving-istio-1.0-mesh
-  agent: kubernetes
-  decorate: true
-  extra_refs:
-  - org: knative
-    repo: serving
-    base_ref: master
-    path_alias: knative.dev/serving
-  spec:
-    containers:
-    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-      imagePullPolicy: Always
-      command:
-      - runner.sh
-      args:
-      - "./test/e2e-tests.sh"
-      - "--istio-version"
-      - "1.0-latest"
-      - "--mesh"
-      volumeMounts:
-      - name: test-account
-        mountPath: /etc/test-account
-        readOnly: true
-      env:
-      - name: GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/test-account/service-account.json
-      - name: E2E_CLUSTER_REGION
-        value: us-central1
-    volumes:
-    - name: test-account
-      secret:
-        secretName: test-account
-- cron: "40 */2 * * *"
-  name: ci-knative-serving-istio-1.0-no-mesh
-  agent: kubernetes
-  decorate: true
-  extra_refs:
-  - org: knative
-    repo: serving
-    base_ref: master
-    path_alias: knative.dev/serving
-  spec:
-    containers:
-    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-      imagePullPolicy: Always
-      command:
-      - runner.sh
-      args:
-      - "./test/e2e-tests.sh"
-      - "--istio-version"
-      - "1.0-latest"
-      - "--no-mesh"
-      volumeMounts:
-      - name: test-account
-        mountPath: /etc/test-account
-        readOnly: true
-      env:
-      - name: GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/test-account/service-account.json
-      - name: E2E_CLUSTER_REGION
-        value: us-central1
-    volumes:
-    - name: test-account
-      secret:
-        secretName: test-account
 - cron: "39 */2 * * *"
   name: ci-knative-serving-istio-1.1-mesh
   agent: kubernetes
@@ -2927,6 +2715,38 @@ periodics:
       - "--istio-version"
       - "1.2-latest"
       - "--no-mesh"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-central1
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
+- cron: "35 */2 * * *"
+  name: ci-knative-serving-gloo-0.17.1
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: serving
+    base_ref: master
+    path_alias: knative.dev/serving
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - runner.sh
+      args:
+      - "./test/e2e-tests.sh"
+      - "--gloo-version"
+      - "0.17.1"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
