Add knative flaky test retrier as adoree
Instead of Trevor, sorry Trevor

--- a/ci/prow/plugins.yaml
+++ b/ci/prow/plugins.yaml
@@ -21,8 +21,8 @@ approve:
   
 heart:
   adorees:
-  - TrevorFarrelly
-  commentregexp: "fixed"
+  - knative-test-reporter-robot
+  commentregexp: "\/test"
 
 repo_milestone:
   # Default maintainer
