added boskoscli to the prow-test image

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -44,7 +44,10 @@ RUN go get -u github.com/jstemmer/go-junit-report
 RUN go get -u github.com/raviqqe/liche
 
 # TODO(joyceyu): Remove once we move off of bash script and use boskos go client library
-RUN go get -u k8s.io/test-infra/boskos/cmd/cli
+RUN go get -u k8s.io/test-infra/boskos/cmd/cli \
+    && cd /go/src/k8s.io/test-infra/boskos/cmd/cli \
+    && go build -o boskoscli \
+    && mv boskoscli /usr/bin/boskoscli
 
 # Extract bazel version
 RUN bazel version > /bazel_version
