add prow jobs to update clusters running serving benchmarks

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5497,6 +5497,7 @@ periodics:
   extra_refs:
   - org: knative
     repo: test-infra
+    base_ref: master
   spec:
     containers:
     - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
@@ -5504,19 +5505,18 @@ periodics:
       command:
       - "/app/robots/commenter/app.binary"
       args:
-      - "|-
-        --query=org:knative
-        repo:test-infra
+      - "--query=repo:knative/test-infra
+        is:issue
+        is:open
         -label:lifecycle/frozen
         -label:lifecycle/stale
         -label:lifecycle/rotten"
       - "--updated=2160h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "|-
-        --comment=Issues go stale after 90d of inactivity.
+      - "--comment=Issues go stale after 90d of inactivity.
         Mark the issue as fresh with /remove-lifecycle stale.
-        Stale issues rot after an additional 30d of inactivity and eventually close.\n
-        If this issue is safe to close now please do so with /close.\n
+        Stale issues rot after an additional 30d of inactivity and eventually close.
+        If this issue is safe to close now please do so with /close.
         Send feedback to Knative Productivity Slack channel or knative/test-infra.
         /lifecycle stale"
       - "--template"
@@ -5537,6 +5537,7 @@ periodics:
   extra_refs:
   - org: knative
     repo: test-infra
+    base_ref: master
   spec:
     containers:
     - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
@@ -5544,20 +5545,19 @@ periodics:
       command:
       - "/app/robots/commenter/app.binary"
       args:
-      - "|-
-        --query=org:knative
-        repo:test-infra
+      - "--query=repo:knative/test-infra
+        is:issue
+        is:open
         -label:lifecycle/frozen
         label:lifecycle/stale
         -label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "|-
-        --comment=Stale issues rot after 30d of inactivity.
+      - "--comment=Stale issues rot after 30d of inactivity.
         Mark the issue as fresh with /remove-lifecycle rotten.
-        Rotten issues close after an additional 30d of inactivity.\n
-        If this issue is safe to close now please do so with /close.\n
-        Send feedback to Knative Productivity Slack channel or knative/test-infra.
+        Rotten issues close after an additional 30d of inactivity.
+		If this issue is safe to close now please do so with /close.
+		Send feedback to Knative Productivity Slack channel or knative/test-infra.
         /lifecycle rotten"
       - "--template"
       - "--ceiling=10"
@@ -5577,6 +5577,7 @@ periodics:
   extra_refs:
   - org: knative
     repo: test-infra
+    base_ref: master
   spec:
     containers:
     - image: gcr.io/k8s-prow/commenter:v20190731-e3f7b9853
@@ -5584,17 +5585,16 @@ periodics:
       command:
       - "/app/robots/commenter/app.binary"
       args:
-      - "|-
-        --query=org:knative
-        repo:test-infra
+      - "--query=repo:knative/test-infra
+        is:issue
+        is:open
         -label:lifecycle/frozen
         label:lifecycle/rotten"
       - "--updated=720h"
       - "--token=/etc/housekeeping-github-token/token"
-      - "|-
-        --comment=Rotten issues close after 30d of inactivity.
+      - "--comment=Rotten issues close after 30d of inactivity.
         Reopen the issue with /reopen.
-        Mark the issue as fresh with /remove-lifecycle rotten.\n
+        Mark the issue as fresh with /remove-lifecycle rotten.
         Send feedback to Knative Productivity Slack channel or knative/test-infra.
         /close"
       - "--template"
@@ -5608,6 +5608,56 @@ periodics:
     - name: housekeeping-github-token
       secret:
         secretName: housekeeping-github-token
+- cron: "30 07 * * *"
+  name: ci-knative-serving-recreate-clusters
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: serving
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - "/test/performance/tools/recreate-serving/recreate.sh"
+      volumeMounts:
+      - name: performance-test
+        mountPath: /etc/performance-test
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/performance-test/service-account.json
+    volumes:
+    - name: performance-test
+      secret:
+        secretName: performance-test
+- cron: "0 * * * *"
+  name: ci-knative-serving-update-clusters
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: serving
+    base_ref: master
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - "/test/performance/tools/update-serving/update.sh"
+      volumeMounts:
+      - name: performance-test
+        mountPath: /etc/performance-test
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/performance-test/service-account.json
+    volumes:
+    - name: performance-test
+      secret:
+        secretName: performance-test
 postsubmits:
   knative/serving:
   - name: post-knative-serving-go-coverage
